<resources>
    <string name="app_name">E-Commerce</string>


    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="auth_welcome_msg" translatable="false">Welcome my App</string>
    <string name="sign_in_msg" translatable="false">Sign in to continue</string>
    <string name="email_et_hint" translatable="false">Email</string>
    <string name="password_et_hint" translatable="false">Password</string>
    <string name="sign_in" translatable="false">Sign in</string>
    <string name="or" translatable="false">Or</string>
    <string name="google_signin_btn_msg" translatable="false">Login with Google</string>
    <string name="facebook_signin_btn_msg" translatable="false">Login with Facebook</string>
    <string name="forgot_password_msg" translatable="false">Forgot Password?</string>
    <string name="dont_have_a_account_msg" translatable="false">Don’t have a account?</string>
    <string name="register" translatable="false">Register</string>
    <string name="loading" translatable="false">loading</string>
    <string name="ok" translatable="false">OK</string>
    <string name="retry" translatable="false">Retry</string>
    <string name="google_sign_in_field_msg" translatable="false">Google sign in failed, please retry again later.</string>
    <string name="facebook_sign_in_field_msg" translatable="false">facebook sign in failed, please retry again later.</string>
    <string name="generic_err_msg" translatable="false">Error please try again later.</string>
    <string name="register_welcome_msg" translatable="false">Let’s Get Started</string>
    <string name="sign_up_msg" translatable="false">Create a new account</string>
    <string name="name_et_hint" translatable="false">Full Name</string>
    <string name="password_again_et_hint" translatable="false">Password Again</string>
    <string name="sign_up" translatable="false">Sign Up</string>
    <string name="have_an_account_msg" translatable="false">have an account?</string>
    <string name="google_signup_btn_msg" translatable="false">Sign up with Google</string>
    <string name="facebook_signup_btn_msg" translatable="false">Sign up with facebook</string>
    <string name="forget_password_msg" translatable="false">Enter your email, to send an email to update your password.</string>
    <string name="send" translatable="false">Send</string>
    <string name="home" translatable="false">Home</string>
    <string name="explore" translatable="false">Explore</string>
    <string name="cart" translatable="false">Cart</string>
    <string name="offer" translatable="false">Offer</string>
    <string name="account" translatable="false">Account</string>
    <string name="search_products" translatable="false">Search Products</string>
    <string name="category" translatable="false">Category\n</string>
    <string name="more_categories" translatable="false">More Category</string>
    <string name="flash_sale" translatable="false">Flash Sale</string>
    <string name="more_flash_sales">See more</string>
    <string name="select_country_msg">Please select your country</string>
    <string name="mega_sale">Mega Sale</string>


</resources>